# esl-worksheet-generator

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.md  requirements.txt  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.js
backend/: alembic.ini  backend.env  create_superuser.py  create_test_data.py  init_db.py  pyproject.toml  requirements.txt  run.py  setup.py  test_auth.py
backend/app/api/: main.py
backend/app/api/models/: auth.py  student.py  transcription.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: database.py  models.py  models_new.py
backend/app/services/: content_generator.py  conversation_analyzer.py  pdf_generator.py  student_extractor.py  worksheet_extractor.py
backend/docs/architecture/: assignment-generator-prd.md  pdf-generator-prd.md  student-info-extraction-prd.md  worksheet-extraction-prd.md
backend/esl_worksheet_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/migrations/: env.py
backend/migrations/versions/: a5cd34adc8f8_create_user_table.py  fb3a5b216251_initial_migration.py
diagrams/: database-schema.mermaid.m  user-flow.mermaid
src/: App.jsx  index.css  main.jsx
src/components/: ConversationGuide.tsx  ProtectedRoute.jsx  StudentForm.tsx  StudentProfile.jsx  StudentProfileEditor.tsx  StuentProfileEditor.tsx
src/components/ui/: form.tsx  select.tsx  separator.tsx  tabs.tsx
src/lib/: auth.jsx
src/pages/: AboutUs.jsx  Login.jsx  Profile.jsx  Register.jsx
src/types/: schema.ts
(+4 files in other folders)
